--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -5,7 +5,8 @@ import { Icon } from 'astro-icon/components';
 <section class="bg-blue-50 dark:bg-slate-800 not-prose">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
     <span class="font-bold">
-      <Icon name="flat-color-icons:print" class="w-5 h-5 inline-block align-text-bottom" /></span>
-      Don't let annoying issues ruin your day. 
+      <Icon name="flat-color-icons:print" class="w-5 h-5 inline-block align-text-bottom" /></span
+    >
+    Don't let annoying issues ruin your day.
   </div>
 </section>
