--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -10,15 +10,17 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-
   <Hero
-    actions={[
-      { text: 'Want to Submit a Ticket?', href: 'https://cihelpdesk.freshdesk.com/' },
-    ]}
-    image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
-    <Fragment slot="title">
-      Thanks! we'll be in touch soon!
-    </Fragment>
+    actions={[{ text: 'Want to Submit a Ticket?', href: 'https://cihelpdesk.freshdesk.com/' }]}
+    image={{
+      src: '~/assets/images/worker.svg',
+      alt: 'Central Illinois Helpdesk',
+      type: 'svg',
+      width: '800px',
+      height: '600px',
+    }}
+  >
+    <Fragment slot="title">Thanks! we'll be in touch soon!</Fragment>
   </Hero>
 
   <CallToAction
@@ -36,7 +38,9 @@ const metadata = {
       Central Illinois <br class="block sm:hidden" /><span class="sm:whitespace-nowrap">HelpDesk</span>
     </Fragment>
     <Fragment slot="subtitle">
-      <span class="text-justify">You've made it this far, sign up and let's get started today. We can't wait to help you with your IT needs.</span>
+      <span class="text-justify"
+        >You've made it this far, sign up and let's get started today. We can't wait to help you with your IT needs.</span
+      >
     </Fragment>
   </CallToAction>
 </Layout>
