--- a/src/components/common/Image.astro
+++ b/src/components/common/Image.astro
@@ -5,14 +5,14 @@ import {
   astroAsseetsOptimizer,
   unpicOptimizer,
   type ImageProps,
-  type AttributesProps
+  type AttributesProps,
 } from '~/utils/images-optimization';
 
 type Props = ImageProps;
 type ImageType = {
   src: string;
   attributes: AttributesProps;
-}
+};
 
 const props = Astro.props;
 if (props.alt === undefined || props.alt === null) {
@@ -45,6 +45,6 @@ if (_image !== null && typeof _image === 'object') {
 } else if (_image) {
   image = await getImagesOptimized(_image, props);
 }
-
 ---
+
 {!image ? <Fragment /> : <img src={image.src} {...image.attributes} />}
