--- a/src/components/ui/forms/Input.astro
+++ b/src/components/ui/forms/Input.astro
@@ -1,14 +1,14 @@
 ---
 const { type, name, id, placeholder, value, required } = Astro.props;
-console.log(required)
+console.log(required);
 ---
 
-<input 
-  type={type} 
-  name={name} 
-  id={id} 
+<input
+  type={type}
+  name={name}
+  id={id}
   value={value}
-  class="block w-full rounded-none rounded-l-sm border-0 py-1.5 pl-10 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm sm:leading-6" 
+  class="block w-full rounded-none rounded-l-sm border-0 py-1.5 pl-10 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm sm:leading-6"
   placeholder={placeholder}
-  { ...(required ? { required: true } : {}) }
+  {...required ? { required: true } : {}}
 />
