--- a/src/pages/tier1.astro
+++ b/src/pages/tier1.astro
@@ -4,11 +4,11 @@ import Hero from '~/components/widgets/Hero.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
 import Features2 from '~/components/widgets/Features2.astro';
-import Steps from '~/components/widgets/Steps.astro';
-import Content from '~/components/widgets/Content.astro';
+// import Steps from '~/components/widgets/Steps.astro';
+// import Content from '~/components/widgets/Content.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
-import FAQs from '~/components/widgets/FAQs.astro';
-import Stats from '~/components/widgets/Stats.astro';
+// import FAQs from '~/components/widgets/FAQs.astro';
+// import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 import OurPrice from '~/components/common/OurPrice.astro';
 const metadata = {
@@ -154,7 +154,11 @@ const metadata = {
     </Fragment>
   </Features2>
 
-  <BlogLatestPosts title="Learn More" } />
+  <BlogLatestPosts
+    title="Learn More"
+    id="blog"
+    information={`Explore our collection of articles, guides, and tutorials on web development, design trends, and using AstroWind effectively for your projects.`}
+  />
 
   <!-- <FAQs
     title="Frequently Asked Questions"
